...
    const form = useForm<ProductEntity>({
        mode: 'onChange',
        defaultValues: {
            id: product?.id,
            name: product?.name,
            description: product?.description,
            price: product?.price,
            tags: product?.tags,
            cost: product?.cost,
            barcode: product?.barcode,
            sku: product?.sku,
            plu: product?.plu,
            unitOfMeasure:
                product?.unitOfMeasure ||
                (ums.length === 1 ? ums[0]?.name : undefined),
            trackStock: product?.trackStock ?? true,
            reorderPoint: product?.reorderPoint,
...
            form.setValue('unitOfMeasure', ums[0].name, {
                shouldValidate: true,
            });
        }
    }, [form, product?.id, ums]);

    const save = async () => {
        setBusy(true);
        try {
            const rawValues = {
                ...(form.getValues() as ProductEntity),
            } as Partial<ProductEntity>;
            if (!rawValues.id && product?.id) {
...
                'COMMON_UndoOperationWarning',
                'You will not be able to undo this operation',
            ),
            [
                { text: t('COMMON_No', 'No') },
                {
                    text: t('COMMON_Yes', 'Yes'),
                    onPress: () => navigation.goBack(),
                },
            ],
        );
    };

...
