...
                            ) : null}
                        </View>
                    )}
                    <View style={styles.actionRail}>
                        <View style={styles.searchContainer}>
                            <TextInput
                                testID="ui-generic-item-list-search-input"
                                value={query}
                                placeholder={t('COMMON_Search', 'Search...')}
                                placeholderTextColor={theme.theme.colors.grey2}
                                style={styles.searchInput}
                                autoCorrect={false}
                                autoCapitalize="none"
...
                            onPress={() => fetchItemsAction && dispatch(fetchItemsAction())}
                        >
                            <Text style={styles.refreshIcon}>↻</Text>
                        </TouchableOpacity>
                        <View style={styles.addButtonContainer}>
                            <TouchableOpacity
                                testID="ui-generic-item-list-add-button"
                                onPress={createNew}
                                style={[
                                    styles.addButton,
                                    { backgroundColor: theme.theme.colors.primary },
                                ]}
                            >
...
